[vllm] Update metax variation

--- a/user-console/vllm/variations/enflame/Chart.yaml
+++ b/user-console/vllm/variations/enflame/Chart.yaml
@@ -3,4 +3,4 @@ name: vllm-enflame
 description: vLLM 是一个高吞吐量和内存高效的 LLM 推理和服务引擎。
 type: application
 version: 0.3.3
-appVersion: "0.6.1.post2"
+appVersion: "v0.6.1.post2"
