--- a/user-console/vllm/variations/metax/Chart.yaml
+++ b/user-console/vllm/variations/metax/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 name: vllm-metax
 description: vLLM 是一个高吞吐量和内存高效的 LLM 推理和服务引擎。
 type: application
-version: 0.3.0
-appVersion: "20241010"
+version: 0.3.3
+appVersion: "v0.6.6"
