--- a/user-console/llama-board/variations/metax/Chart.yaml
+++ b/user-console/llama-board/variations/metax/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: llama-board
+name: llama-board-metax
 description: Llama Board 是 LLaMA-Factory 项目的网页 UI，用于（增量）预训练、指令微调和评估开源 LLM。
 type: application
 version: 0.2.1
-appVersion: "0.9.2"
+appVersion: "v0.8.4.dev0"
