--- a/user-console/terminal/docker/Dockerfile-amd64
+++ b/user-console/terminal/docker/Dockerfile-amd64
@@ -1,4 +1,8 @@
-FROM centos:7.6.1810
+FROM centos:8
+
+# modify yum download source
+RUN sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*.repo && \
+    sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*.repo
 
 # install develope tools
 RUN yum update -y && \
@@ -14,20 +18,28 @@ RUN yum update -y && \
       zsh \
       tmux
 
-RUN yum install -y libuv-devel
+RUN yum install -y dnf-plugins-core && \
+    dnf -y module enable libuv && \
+    yum install -y libuv-devel && \
+    ln -s /usr/include/libuv /usr/include/uv
+
+ARG GITHUB_PROXY="https://ghfast.top"
 
 # clone and compile libwebsockets
-RUN git clone https://mirror.ghproxy.com/https://github.com/warmcat/libwebsockets.git && \
+RUN git clone $GITHUB_PROXY/https://github.com/warmcat/libwebsockets.git && \
     cd libwebsockets && \
     git checkout v4.1-stable && \
     mkdir build && \
     cd build && \
-    cmake .. -DLWS_WITH_LIBUV=ON && \
+    cmake .. \
+      -DLWS_WITH_LIBUV=ON \
+      -DLWS_LIBUV_INCLUDE_DIRS=/usr/include/libuv \
+      -DLWS_LIBUV_LIBRARIES=/usr/lib64/libuv.so && \
     make && \
     make install
 
 # clone and compile ttyd
-RUN git clone https://mirror.ghproxy.com/https://github.com/tsl0922/ttyd.git && \
+RUN git clone $GITHUB_PROXY/https://github.com/tsl0922/ttyd.git && \
     cd ttyd && \
     git checkout 1.6.3 && \
     mkdir build && \
@@ -49,33 +61,10 @@ RUN curl -LO "https://storage.googleapis.com/kubernetes-release/release/v1.25.9/
     && chmod +x ./kubectl \
     && mv ./kubectl /usr/local/bin/kubectl
 
-
-# RUN cd /bin && wget https://github.com/neovim/neovim/releases/download/nightly/nvim-linux64.tar.gz && \
-#       tar zxvf nvim-linux64.tar.gz && cp /bin/nvim-linux64/bin/nvim /bin/nvim-linux64/bin/vim && ls /bin/nvim-linux64/bin/vim
-# ENV PATH=$PATH:/bin/nvim-linux64/bin
-
-RUN  yum install -y  ncurses-devel ruby ruby-devel lua lua-devel luajit \
-        luajit-devel ctags git python python-devel \
-        python3 python3-devel tcl-devel \
-        perl perl-devel perl-ExtUtils-ParseXS \
-        perl-ExtUtils-XSpp perl-ExtUtils-CBuilder \
-        perl-ExtUtils-Embed  \
-        gcc-c++ cmake make  && \
-        wget https://github.com/vim/vim/archive/v8.1.0994.tar.gz && \
-        tar zxvf v8.1.0994.tar.gz  && cd vim-8.1.0994/src && \
-        ./configure --with-features=huge \
-            --enable-multibyte \
-            --enable-pythoninterp=yes \
-            --with-python-config-dir=/lib64/python2.7/config \
-            --enable-python3interp=yes \
-            --with-python3-config-dir=/lib64/python3.5/config \
-            --enable-gui=gtk2 \
-            --enable-cscope \
-           --prefix=/usr/local \
-         && make VIMRUNTIMEDIR=/usr/local/share/vim/vim81  && make install
-RUN update-alternatives --install /usr/bin/editor editor /usr/local/bin/vim 1 && \
-     update-alternatives --set editor /usr/local/bin/vim
-ENV PATH=$PATH:/usr/local/bin
+RUN yum install -y vim-enhanced && \
+        mkdir -p /var/lib/alternatives && \
+        update-alternatives --install /usr/bin/vim vim /usr/bin/vim-enhanced 100 && \
+        update-alternatives --set vim /usr/bin/vim-enhanced
 
 # install vim and vim plugins
 RUN git clone https://github.com/VundleVim/Vundle.vim.git ~/.vim/bundle/Vundle.vim  && go get github.com/golang/lint || true
