--- a/user-console/dify/chart/Chart.yaml
+++ b/user-console/dify/chart/Chart.yaml
@@ -3,15 +3,15 @@ appVersion: 1.1.3
 dependencies:
 - condition: redis.embedded
   name: redis
-  repository: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
+  repository: oci://registry-1.docker.io/bitnamicharts
   version: ~19.1.1
 - condition: postgresql.embedded
   name: postgresql
-  repository: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
+  repository: oci://registry-1.docker.io/bitnamicharts
   version: ~15.2.5
 - condition: minio.embedded
   name: minio
-  repository: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
+  repository: oci://registry-1.docker.io/bitnamicharts
   version: ~14.1.7
 description: A Helm chart for Dify
 home: https://github.com/langgenius/dify
@@ -19,4 +19,4 @@ maintainers:
 - name: douban
 name: dify
 type: application
-version: 0.6.1
+version: 0.6.2
