--- a/user-console/dify/configs/v0_6_2.yaml
+++ b/user-console/dify/configs/v0_6_2.yaml
@@ -9,7 +9,7 @@ global:
   ##
   image:
     registry: "$(T9K_APP_IMAGE_REGISTRY)"
-    tag: "1.1.3"
+    tag: "1.3.0"
     pullPolicy: IfNotPresent
 
   extraEnvs: []
@@ -53,12 +53,17 @@ global:
   # - name: QDRANT_GRPC_PORT
   #   value: "6334"
 
-
 ## @param frontend.image.repository Frontend image repository
+## @param frontend.resources.limits.cpu Frontend cpu limit
+## @param frontend.resources.limits.memory Frontend memory limit
 ##
 frontend:
   image:
     repository: "$(T9K_APP_IMAGE_NAMESPACE)/dify-web"
+  resources:
+    limits:
+      cpu: 500m
+      memory: 2Gi
 
 ## @param api.replicaCount API replica count
 ## @param api.image.repository API image repository
@@ -88,12 +93,16 @@ worker:
       cpu: 4
       memory: 16Gi
 
+## @param sandbox.replicaCount Sandbox replica count
 ## @param sandbox.apiKey Sandbox API key
 ## @param sandbox.image.repository Sandbox image repository
 ## @param sandbox.image.tag Sandbox image tag
 ## @param sandbox.config.python_requirements Python requirements for sandbox
+## @param sandbox.resources.limits.cpu Sandbox cpu limit
+## @param sandbox.resources.limits.memory Sandbox memory limit
 ##
 sandbox:
+  replicaCount: 1  # 1 for testing, 2-3 for production
   apiKey: "dify-sandbox"
   image:
     repository: "$(T9K_APP_IMAGE_NAMESPACE)/dify-sandbox"
@@ -103,20 +112,31 @@ sandbox:
     #   numpy==1.20.3
     #   scipy==1.6.3
     python_requirements: ""
+  resources:
+    limits:
+      cpu: 2
+      memory: 8Gi
 
+## @param pluginDaemon.replicaCount PluginDaemon replica count
 ## @param pluginDaemon.serverKey PluginDaemon server key
 ## @param pluginDaemon.difyInnerApiKey PluginDaemon Dify inner api key
 ## @param pluginDaemon.image.repository PluginDaemon image repository
 ## @param pluginDaemon.image.tag PluginDaemon image tag
 ## @param pluginDaemon.config.python_requirements Python requirements for pluginDaemon
+## @param pluginDaemon.resources.limits.cpu PluginDaemon cpu limit
+## @param pluginDaemon.resources.limits.memory PluginDaemon memory limit
 ##
 pluginDaemon:
+  replicaCount: 1
   serverKey: "dify-plugin-daemon"
   difyInnerApiKey: "dify-inner-api-key"
   image:
     repository: "$(T9K_APP_IMAGE_NAMESPACE)/dify-plugin-daemon"
     tag: "0.0.6-local"
-
+  resources:
+    limits:
+      cpu: 2
+      memory: 4Gi
 
 ## @param redis.embedded Enable/disable embedded Redis
 ## @param redis.image.registry Redis image registry
