--- a/.github/workflows/release-comfyui.yml
+++ b/.github/workflows/release-comfyui.yml
@@ -25,9 +25,17 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Log in to T9K Registry
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          registry: registry.t9kcloud.cn
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+
       - name: Package and push chart
         run: |
           cd $GITHUB_WORKSPACE
           cd user-console/comfyui
           helm package ./chart
           helm push *.tgz oci://docker.io/t9kpublic
+          helm push *.tgz oci://registry.t9kcloud.cn/t9kcharts
