--- a/.github/workflows/release-jupyterlab.yml
+++ b/.github/workflows/release-jupyterlab.yml
@@ -1,11 +1,11 @@
-name: Release vLLM Helm Charts
+name: Release Jupyterlab Helm Charts
 
 on:
   push:
     branches:
       - master
     paths:
-      - "user-console/vllm/vllm-smls-dcu/chart/Chart.yaml"
+      - "user-console/notebook/jupyterlab/chart/Chart.yaml"
 
 jobs:
   release:
@@ -25,9 +25,18 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Log in to T9K Registry
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          registry: registry.t9kcloud.cn
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+
       - name: Package and push chart
         run: |
           cd $GITHUB_WORKSPACE
-          cd user-console/vllm/vllm-smls-dcu
+          cd user-console/notebook/jupyterlab
+          helm dependency update ./chart
           helm package ./chart
           helm push *.tgz oci://docker.io/t9kpublic
+          helm push *.tgz oci://registry.t9kcloud.cn/t9kcharts
