--- a/user-console/notebook/jupyterlab/variations/enflame/v0_2_3.yaml
+++ b/user-console/notebook/jupyterlab/variations/enflame/v0_2_3.yaml
@@ -1,30 +1,45 @@
-## @param image.registry JupyterLab image registry
-## @param image.repository JupyterLab image repository
-## @param image.tag JupyterLab image tag
-## @param image.pullPolicy JupyterLab image pull policy
-##
+# +t9k:form:pattern v2
+
+# +t9k:description:en JupyterLab image config.
+# +t9k:description:zh JupyterLab 镜像信息。
 image:
+  # +t9k:form
+  # +t9k:description:en JupyterLab image registry.
+  # +t9k:description:zh JupyterLab 镜像仓库。 
   registry: "$(T9K_APP_IMAGE_REGISTRY)"
+  # +t9k:form
+  # +t9k:description:en JupyterLab image repository.
+  # +t9k:description:zh JupyterLab 镜像名称。
   repository: "topsrider/jupyterlab-torch-2.3.0"
+  # +t9k:form
+  # +t9k:description:en JupyterLab image tag.
+  # +t9k:description:zh JupyterLab 镜像标签。
   tag: "20241224"
   pullPolicy: IfNotPresent
 
-## @param[required] pvc Mount a PVC as JupyterLab workspace
+# +required
+# +t9k:form
+# +t9k:description:zh 绑定一个 PVC 作为 JupyterLab 工作空间。 
+# +t9k:description:en Mount a PVC as JupyterLab workspace.
 pvc: ""
 
-## @param resources.limits.cpu CPU limit for JupyterLab container
-## @param resources.limits.memory Memory limit for JupyterLab container
-## @param resources.limits."enflame.com/gcu" Enflame GCU limit for JupyterLab container
 resources:
+  # +t9k:description:en App resource limit.
+  # +t9k:description:zh App 资源限额。
   limits:
+    # +t9k:form
+    # +t9k:description:en CPU limit for the App container.
+    # +t9k:description:zh App CPU 限制。
     cpu: 16
+    # +t9k:form
+    # +t9k:description:en Memory limit for the App container.
+    # +t9k:description:zh App 内存限制。
     memory: 32Gi
+    # +t9k:form
+    # +t9k:description:en Enflame GCU limit for JupyterLab container.
+    # +t9k:description:zh Enflame GCU 限制。
     enflame.com/gcu: 1
 
-## @param ssh.enabled Set true to start a SSH Service for JupyterLab
-## @param ssh.authorizedKeys A list of names of v1.Secret containing SSH public keys authorized for access to this SSH service
-## @param ssh.serviceType Type for the SSH service (`ClusterIP` or `NodePort`)
-#
 # ssh:
 #   enabled: true
 #   authorizedKeys:
