--- a/user-console/job-manager/configs/v0_2_4.yaml
+++ b/user-console/job-manager/configs/v0_2_4.yaml
@@ -26,3 +26,6 @@ web:
     registry: "$(T9K_APP_IMAGE_REGISTRY)"
     repository: "$(T9K_APP_IMAGE_NAMESPACE)/job-manager-web"
     tag: "250513"
+
+kueue:
+  enabled: true
