--- a/user-console/notebook/rstudio/chart/values.yaml
+++ b/user-console/notebook/rstudio/chart/values.yaml
@@ -4,7 +4,10 @@ image:
   tag: "1.72.1"
   pullPolicy: IfNotPresent
 
-pvc: ""
+volumes:
+  workingDir: 
+    pvc: ""
+  extraVolumes: []
 
 resources:
   limits:
