--- a/user-console/dify/template.yaml
+++ b/user-console/dify/template.yaml
@@ -12,15 +12,17 @@ template:
     # repo: "https://t9k.github.io/apps/"
     chart: "dify"
     versions:
-    - version: 0.3.9
-      config: "file://$APP_DIR/configs/v1/v0_3_9.yaml"
-      urls: []
+    - version: 0.7.0
+      config: "file://$APP_DIR/configs/v2/v0_7_0.yaml"
+      urls:
+      - name: UI
+        url: /apps/{{ .Release.Namespace }}/dify/{{ .Release.Name }}/apps
       readinessProbe:
         resources:
         - group: apps
           version: v1
           resource: deployments
-          name: "{{ .Release.Name }}-api"
+          name: "{{ .Release.Name }}-frontend"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
       dependencies: {}
