--- a/user-console/dify/chart/Chart.yaml
+++ b/user-console/dify/chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 1.3.1.post1
+appVersion: 1.4.3
 dependencies:
 - condition: redis.embedded
   name: redis
@@ -19,4 +19,4 @@ maintainers:
 - name: douban & t9k
 name: dify
 type: application
-version: 0.7.0
+version: 0.7.1
