--- a/user-console/dify/chart/values.yaml
+++ b/user-console/dify/chart/values.yaml
@@ -75,8 +75,9 @@ frontend:
 
   podAnnotations: {}
 
-  podSecurityContext: {}
-    # fsGroup: 2000
+  podSecurityContext:
+    fsGroup: 1001
+    runAsUser: 1001
 
   securityContext: {}
     # capabilities:
