[dify] Bump appVersion to 1.4.3; fix some problems

--- a/user-console/dify/chart/templates/deployment.yaml
+++ b/user-console/dify/chart/templates/deployment.yaml
@@ -221,6 +221,7 @@ spec:
       securityContext:
         fsGroup: 1001
         runAsUser: 1001
+      enableServiceLinks: false
       initContainers:
         - name: {{ .Chart.Name }}-builder
           securityContext:
